--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Força a saída de logs com cores ANSI
 spring.output.ansi.enabled=ALWAYS
+
+# Chave secreta para assinatura dos tokens JWT
+# EM PRODUÇÃO, ISSO DEVE VIR DE UMA VARIÁVEL DE AMBIENTE E SER MUITO MAIS COMPLEXA!
+api.security.token.secret=calcana-super-secreto-para-gerar-tokens-validos
