--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
             <version>5.2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.itextpdf</groupId>
