--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/assocanaDB?useSSL=false&server
 spring.datasource.username=root
 spring.datasource.password=rootroot
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -14,3 +14,14 @@ spring.output.ansi.enabled=ALWAYS
 # Chave secreta para assinatura dos tokens JWT
 # EM PRODUÇÃO, ISSO DEVE VIR DE UMA VARIÁVEL DE AMBIENTE E SER MUITO MAIS COMPLEXA!
 api.security.token.secret=calcana-super-secreto-para-gerar-tokens-validos
+
+# --- Configuração de E-mail (SMTP via Brevo) ---
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=9b77c6001@smtp-brevo.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Define o e-mail que aparecerá como remetente
+calcana.email.remetente=calcanaassocana@gmail.com
